force-app/main/default/objects/Content_File_Details__c/Content_File_Details__c.object-meta.xml
<CustomObject>
    <description>ContentFileDetails (or ContentMetadata) is a custom object designed to aggregate and display essential information from related Salesforce Content* objects for a given record. This object consolidates key details from multiple content-related entities—such as ContentVersion, ContentDocument, and other related objects—into a single, accessible view.</description>
    <label>Content File Details</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content File Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>