force-app/main/default/objects/Content_File_Details__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <description>Total File Size, in MB.</description>
    <inlineHelpText>Total File Size, in MB.</inlineHelpText>
    <label>File Size (In MB)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>