force-app/main/default/objects/Content_File_Details__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <description>Type of file.</description>
    <inlineHelpText>Type of file.</inlineHelpText>
    <label>File Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>