force-app/main/default/objects/Content_File_Details__c/fields/Is_Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the current file is the latest version.</description>
    <inlineHelpText>Whether the current file is the latest version.</inlineHelpText>
    <label>Is Latest Version?</label>
    <type>Checkbox</type>
</CustomField>