force-app/main/default/objects/Content_File_Details__c/fields/Last_Modification_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Modification_On__c</fullName>
    <description>Date the document was last modified.</description>
    <inlineHelpText>Date the document was last modified.</inlineHelpText>
    <label>Last Modification On</label>
    <type>DateTime</type>
</CustomField>