force-app/main/default/objects/Content_File_Details__c/fields/Last_Viewed_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Viewed_On__c</fullName>
    <description>When was the document last viewed by the current user.</description>
    <inlineHelpText>When was the document last viewed by the current user.</inlineHelpText>
    <label>Last Viewed On</label>
    <type>DateTime</type>
</CustomField>