force-app/main/default/objects/Content_File_Details__c/fields/Reason_For_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Change__c</fullName>
    <description>The reason why the file was changed.</description>
    <inlineHelpText>The reason why the file was changed.</inlineHelpText>
    <label>Reason For Change</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>