force-app/main/default/objects/Content_File_Details__c/fields/Reference_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_Version_ID__c</fullName>
    <description>Reference Content Version ID of the file to be shared.</description>
    <inlineHelpText>Reference Content Version ID of the file to be shared.</inlineHelpText>
    <label>Reference Version ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>