force-app/main/default/objects/Content_File_Details__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>The version number of the document.</description>
    <inlineHelpText>The version number of the document.</inlineHelpText>
    <label>Version Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>